agregue todo lo referido al ejercicio SASS II + SEO

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Linkeo mi CSS -->
         <link rel="stylesheet" href="css/estilos.css">
         <link rel="icon" href="imgs/icon.jpg" >
-        <title>[C11] 5ta entrega - Leandro Pagano]</title>
+        <title>[C15] 7ta entrega - Leandro Pagano]</title>
     </head>
 
 <!-- Estoy en Index -->
@@ -22,12 +22,16 @@
     <div class="container-fluid ">
         <div class="row">
             <div class="col-12 col-sm-5">
-                <img src="imgs/bann.jpg" class="img-fluid" alt="Logo">
+                <img src="imgs/bann.jpg" class="img-fluid" alt="Logo gym Rick and Summer">
             </div>
-        <div class="col">
+        <div class="col encabez">
             <h1 class="text-center font-monospace display-3 fw-bold py-2">Clases y horarios</h1>
+            <div>
+                <h6 id="man">De 8 a 12 Hs</h6>
+                <h6 id="tar">De 14 a 18 Hs</h6>
+            </div>
             <nav class="nav nav-pills flex-column flex-sm-row border">
-                <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">TURNO MAÑANA</a>
+                <a class="flex-sm-fill text-sm-center nav-link act active" aria-current="page" href="#">TURNO MAÑANA</a>
                 <a class="flex-sm-fill text-sm-center nav-link " href="pags/secun.html">TURNO TARDE</a>
             </nav>
 
@@ -114,10 +118,10 @@
                         <p>Av. Mitre 1234,Turdera.</p>
                     </div> 
                     <div class="col-6 d-flex justify-content-end" id="links">
-                        <a href="#"><i class="fab fa-whatsapp fa-3x p-1 "></i></a>
-                        <a href="#"><i class="fab fa-instagram fa-3x p-1"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f fa-3x p-1"></i></a>
-                        <a href="#"><i class="fab fa-youtube fa-3x p-1s"></i></a>       
+                        <a href="#"><i class="fab fa-whatsapp fa-3x p-1 wp"></i></a>
+                        <a href="#"><i class="fab fa-instagram fa-3x p-1 ig"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f fa-3x p-1 fb"></i></a>
+                        <a href="#"><i class="fab fa-youtube fa-3x p-1s yt"></i></a>       
                     </div>
                 </div>
             </footer>
