--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name="description" content="Horarios y clases por la mañana en el gym Rick and Summer">
+        <meta name="keywords" content="gimnasio turdera rick and summer horarios">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         
         <!-- Font Awesome -->
@@ -14,7 +17,9 @@
         <!-- Linkeo mi CSS -->
         <link rel="stylesheet" href="css/estilos.css">
         <link rel="icon" href="imgs/icon.jpg" >
-        <title>[C15] 7ta entrega - Leandro Pagano]</title>
+
+        <title>[C15] 7ta entrega - Leandro Pagano] / Gym Rick and Summer </title>
+
     </head>
 
 <!-- Estoy en Index -->
