--- a/pags/secun.html
+++ b/pags/secun.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         
-        
+        <meta name="description" content="Horarios y clases por la tarde en el gym Rick and Summer">
+        <meta name="keywords" content="gimnasio turdera rick and summer horarios">
+
         <!-- Font Awesome -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
         <!-- Google Fonts -->
@@ -15,7 +17,7 @@
         <!-- Linkeo mi CSS -->
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="icon" href="../imgs/icon.jpg" >
-        <title>[C15] 7ta entrega - Leandro Pagano]</title>
+        <title>[C15] 7ta entrega - Leandro Pagano] / Gym Rick and Summer</title>
 
 
     </head>
